# doosan_xbot2

./: CMakeLists.txt  README.md  estimate_passive.mat
doosan_cartesio/: CMakeLists.txt  package.xml
doosan_cartesio/config/: doosan_simple.yaml
doosan_cartesio/launch/: doosan.launch
doosan_cartesio/rviz/: doosan_cartesio.rviz
doosan_xbot2_config/: CMakeLists.txt  doosan_impedance_config.yaml  doosan_xbot2_config.yaml  package.xml
doosan_xbot2_config/hal/: doosan.yaml  gz.yaml
doosan_xbot2_config/launch/: doosan_xbot2.launch
doosan_xbot2_config/meshes/: doosan_tool_attachment.dae
doosan_xbot2_config/rviz/: doosan_xbot2.rviz
doosan_xbot2_config/srdf/: h2515.srdf  h2515_dewalt.srdf
doosan_xbot2_config/urdf/: h2515.urdf  h2515_dewalt.urdf
doosan_xbot2_examples/: CMakeLists.txt  estimate_actual_torque.py  estimate_passive_compensator_second_joint.py  package.xml  periodic_motion.cpp  periodic_motion.h
doosan_xbot2_gazebo/: CMakeLists.txt  package.xml
doosan_xbot2_gazebo/launch/: doosan_xbot2_gazebo.launch
doosan_xbot2_gazebo/worlds/: doosan.world
doosan_xbot2_hal/: CMakeLists.txt  package.xml
doosan_xbot2_hal/include/: doosan_device.h  doosan_device_client.h  doosan_device_driver.h  doosan_packet.h
doosan_xbot2_hal/src/: doosan_device.cpp
rviz/: doosan_xbot2.rviz
