<?xml version="1.0"?>
<package format="2">
  <name>doosan_cartesio</name>
  <version>0.0.1</version>
  <description>The doosan_cartesio package</description>
  <maintainer email="luca.muratore@iit.it">Luca Muratore</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
