<?xml version="1.0"?>
<package format="2">
  <name>doosan_xbot2_examples</name>
  <version>0.0.1</version>
  <description>The Doosan xbot2 examples package</description>
  <maintainer email="luca.muratore@iit.it">Luca Muratore</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>